--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $secondary: rgb(45, 48, 51);
 $purple: rgba(101, 14, 163, 0.719);
 $pink: #923680;
 $pink_2: #af7099;
+$white: #fff;
 
 // border-radius
 $borderRadius: 12px;
