--- a/src/components/Layout/Nav/Nav.module.scss
+++ b/src/components/Layout/Nav/Nav.module.scss
@@ -2,6 +2,7 @@
 
 .nav {
     height: 100%;
+    display: none;
     align-items: center;
 
     ul {
@@ -23,29 +24,8 @@
                 font-size: 1.1rem;
                 letter-spacing: $letterSpacing;
                 text-decoration: none;
-                color: white;
+                color: $white;
                 position: relative;
-
-                &::after {
-                    content: "";
-                    position: absolute;
-                    width: 100%;
-                    height: 3px;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-                    background: white;
-                    opacity: 0;
-                    transition: 0.3s ease opacity;
-                }
-
-                &:hover::after {
-                    opacity: 1;
-                }
-
-                &:hover {
-                    color: white;
-                }
             }
         }
     }
@@ -74,10 +54,10 @@
 
             a {
                 text-decoration: none;
-                color: white;
+                color: $white;
 
                 &:hover {
-                    color: white;
+                    color: $white;
                 }
             }
         }
