--- a/src/components/Layout/Nav/Nav.module.scss
+++ b/src/components/Layout/Nav/Nav.module.scss
@@ -26,6 +26,10 @@
                 text-decoration: none;
                 color: $white;
                 position: relative;
+
+                &:hover{
+                    color: $pink_2;
+                }
             }
         }
     }
