--- a/src/components/Layout/Hero.module.scss
+++ b/src/components/Layout/Hero.module.scss
@@ -1,6 +1,24 @@
 @import '/src/styles/variables.scss';
 
 .hero {
-    height: 200Vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    height: 90vh;
     background-color: $primary;
+
+    div {
+        height: 300px;
+        width: 50%;
+    }
+
+    &__intro {
+        background: $white;
+    }
+
+    &__projects {
+
+        background: $white;
+    }
 }
