--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,13 @@ body {
 #root {
     height: 100%;
 }
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+*::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0);
+}
+*::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 10px rgb(78, 78, 78);
+}
