--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@
 $poppins: "Poppins",
 sans-serif;
 
-$primary: #dadada;
+$primary: rgba(23, 25, 27, 255);
 $secondary: rgb(45, 48, 51);
 $purple: rgba(101, 14, 163, 0.719);
 $pink: #923680;
