--- a/src/components/Layout/Hero.module.scss
+++ b/src/components/Layout/Hero.module.scss
@@ -17,19 +17,35 @@
 
     &__intro {
         display: grid;
-        align-content: space-evenly;
+        align-content: center;
         justify-items: start;
 
+        &>* {
+            margin: 15px;
+        }
+
         h1 {
+            text-align: center;
             font-size: 3em;
-            font-weight: bold;
             letter-spacing: $letterSpacing;
-            background-image: url("../../assets/bckr.webp");
-            -webkit-text-stroke: 0.1px rgb(122, 122, 122);
-            -webkit-background-clip: text;
-            -moz-backface-clip: text;
-            -webkit-text-fill-color: transparent;
-            -moz-text-fill-color: transparent;
+            color: $white;
+
+            span {
+                background-image: url("../../assets/bckr.webp");
+                -webkit-text-stroke: 0.1px rgb(122, 122, 122);
+                -webkit-background-clip: text;
+                -moz-backface-clip: text;
+                -webkit-text-fill-color: transparent;
+                -moz-text-fill-color: transparent;
+                font-weight: bold;
+            }
+        }
+
+        h2 {
+            color: $white;
+            text-align: center;
+            font-size: 2em;
+            letter-spacing: $letterSpacing;
         }
 
         p {
@@ -41,8 +57,9 @@
 
     &__projects {
         div {
-        overflow: hidden;
-        width: 500px;
+            overflow: hidden;
+            width: 500px;
+
             img {
                 width: 100%;
                 object-fit: cover;
