--- a/src/components/Layout/Hero.module.scss
+++ b/src/components/Layout/Hero.module.scss
@@ -1,12 +1,24 @@
 @import '/src/styles/variables.scss';
 
 .hero {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
+    @include breakpoint(md) {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+
+    }
+
+    position: relative;
+    padding: 0 100px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     align-content: center;
-    height: 90vh;
+    align-items: flex-end;
+    min-height: 90vh;
     background-color: $primary;
 
     div {
@@ -56,13 +68,32 @@
     }
 
     &__projects {
+        position: relative;
+
         div {
             overflow: hidden;
-            width: 500px;
+            width: 100%;
+            z-index: 1000;
 
             img {
-                width: 100%;
+                width: 400px;
                 object-fit: cover;
+                z-index: -1;
+                border-radius: $borderRadius;
+                mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.95) 100%);
+                -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.95) 20%);
+            }
+
+            img:nth-child(2) {
+                width: 400px;
+                position: absolute;
+                z-index: -1;
+                left: 100px;
+                bottom: 100px;
+            }
+
+            img::after {
+                background-color: aqua;
             }
         }
     }
@@ -70,8 +101,10 @@
     &__astronaut {
         position: absolute;
         width: 300px;
-        animation: moveUpDown 3s ease-in-out infinite;
+        animation: moveUpDown 4s ease-in-out infinite;
         z-index: 1;
+        left: 280px;
+        mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.95) 100%);
 
         @keyframes moveUpDown {
             0% {
@@ -87,5 +120,4 @@
             }
         }
     }
-
 }
