--- a/src/components/Layout/Hero/Hero.module.scss
+++ b/src/components/Layout/Hero/Hero.module.scss
@@ -38,7 +38,7 @@
 
         h1 {
             text-align: center;
-            font-size: 3em;
+            font-size: $headingH1;
             letter-spacing: $letterSpacing;
             color: $white;
 
@@ -56,11 +56,12 @@
         h2 {
             color: $white;
             text-align: center;
-            font-size: 2em;
+            font-size: $headingH2;
             letter-spacing: $letterSpacing;
         }
 
         p {
+            font-size: $headingH3;
             color: $white;
             letter-spacing: $letterSpacing;
         }
