--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Vibur:400');
+
+$neon: "Vibor",
+sans-serif;
 
 $poppins: "Poppins",
 sans-serif;
@@ -21,6 +25,12 @@ $spacing-sm: 12px;
 $spacing-md: 24px;
 $spacing-lg: 32px;
 $spacing-xl: 64px;
+
+// font size
+
+$headingH1: 3em;
+$headingH2: 2.3em;
+$headingH3: 1.5em;
 
 // breakpoints
 @mixin breakpoint($point) {
