--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,8 @@ $pink: #923680;
 $pink_2: #af7099;
 $white: #fff;
 
+$pink_background: url("../assets/bckr.webp");
+
 // border-radius
 $borderRadius: 12px;
 
@@ -28,7 +30,7 @@ $spacing-xl: 64px;
 
 // font size
 
-$headingH1: 3em;
+$headingH1: 3.5em;
 $headingH2: 2.3em;
 $headingH3: 1.5em;
 
