--- a/src/components/Layout/CounterBar/CounterBar.module.scss
+++ b/src/components/Layout/CounterBar/CounterBar.module.scss
@@ -2,67 +2,51 @@
 
 .counter {
     width: 100%;
-    background: black;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    text-align: center;
+    height: 130px;
 
-    h3,
-    p {
-        margin: 20px 0;
-        font-family: $neon;
-        color: #fff;
-        text-shadow:
-            0 0 7px #fff,
-            0 0 10px #fff,
-            0 0 21px #fff,
-            0 0 42px #f09,
-            0 0 82px #f09,
-            0 0 92px #f09,
-            0 0 102px #f09,
-            0 0 151px #f09;
-        font-size: $headingH1;
-        animation: flicker 1.5s infinite alternate;
+    background: url('../../../assets/black-background.webp') no-repeat left center / cover;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 10%, rgba(0, 0, 0, 0.99) 100%);
 
-    }
-
-    h3 {
-        font-size: $headingH3;
+    &__title {
         color: $white;
+        text-align: center;
+        font-size: $headingH3;
+        padding: 15px 0;
     }
 
-    p {
-       
-    }
+    &__digits {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        text-align: center;
 
-    @keyframes flicker {
-
-        0%,
-        18%,
-        22%,
-        25%,
-        53%,
-        57%,
-        100% {
-
-            text-shadow:
-                0 0 7px #fff,
-                0 0 10px #fff,
-                0 0 21px #fff,
-                0 0 42px #f09,
-                0 0 82px #f09,
-                0 0 92px #f09,
-                0 0 102px #f09,
-                0 0 151px #f09;
-
+        div {
+            display: flex;
+            align-items: center;
         }
 
-        20%,
-        24%,
-        55% {
-            text-shadow: none;
+        h3,
+        p {
+            margin: 0 20px;
+            font-family: $neon;
+            color: #fff;
+        }
+
+        h3 {
+            font-size: $headingH3;
+            color: $white;
+        }
+
+        p {
+            font-size: $headingH1;
+            background-image: $pink_background;
+            -webkit-text-stroke: 0.1px rgb(122, 122, 122);
+            -webkit-background-clip: text;
+            -moz-backface-clip: text;
+            -webkit-text-fill-color: transparent;
+            -moz-text-fill-color: transparent;
+            font-weight: bold;
         }
     }
 
