--- a/src/components/UI/Button.module.scss
+++ b/src/components/UI/Button.module.scss
@@ -2,21 +2,15 @@
 
 .btn {
     color: $white;
-    background: linear-gradient(38deg, #8563b5, #4d4e97);
-    border: 0.9px solid rgb(112, 112, 112);
+    background: linear-gradient(38deg, $pink, $pink_2);
+    border: none;
     border-radius: 2em;
     margin: 0.5em;
-    padding: 1em;
-    font-size: 16px;
+    padding: 1.5em;
+    font-size: 1.1em;
     letter-spacing: $letterSpacing;
 
     &:hover {
-        background: linear-gradient(38deg, #8563b5ab, #4d4e9775);
-        border: 0.9px solid rgb(112, 112, 112);
-        border-radius: 2em;
-        margin: 0.5em;
-        padding: 1em;
-        font-size: 16px;
-        color: #fff;
+        background: linear-gradient(38deg, $purple, $pink);
     }
 }
