--- a/src/components/Layout/Hero/Hero.module.scss
+++ b/src/components/Layout/Hero/Hero.module.scss
@@ -19,7 +19,7 @@
     align-content: center;
     align-items: flex-end;
     min-height: 90vh;
-    background-color: $primary;
+    // background-color: $primary;
 
     div {
         margin: 50px 20px;
