--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -1,10 +1,18 @@
 @import '/src/styles/variables.scss';
 
 .projects {
+    display: grid;
+    justify-items: center;
+    justify-content: center;
+    width: 100%;
     height: 90vh;
     background: $primary;
 
-    &__header{
-
+    &__header {
+        h2 {
+            color: $white;
+             font-size: $headingH1;
+            letter-spacing: $letterSpacing;
+        }
     }
 }
