--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -4,11 +4,12 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
+    height: 110vh;
     width: 100%;
     background: #121a26;
-    
+
     &__header {
-        margin: 100px 0 50px 0;        
+        margin: 100px 0 50px 0;
         color: $white;
         text-align: center;
 
@@ -23,7 +24,7 @@
         }
 
         a:hover {
-            color: $white
+            color: $pink
         }
     }
 
