--- a/src/components/Layout/Projects/Tech.module.scss
+++ b/src/components/Layout/Projects/Tech.module.scss
@@ -12,5 +12,10 @@
         padding: 1.5em;
         font-size: 1em;
         letter-spacing: $letterSpacing;
+        transition: 0.2s;
+
+        &:hover {
+            box-shadow: 0 0 30px $pink;
+        }
     }
 }
