--- a/src/components/Layout/Nav/Nav.module.scss
+++ b/src/components/Layout/Nav/Nav.module.scss
@@ -25,7 +25,7 @@
                 display: flex;
                 align-items: center;
                 height: 100%;
-                font-size: 1.1rem;
+                font-size: $headingH3;
                 position: relative;
 
               
