--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -6,7 +6,10 @@
     justify-items: center;
     height: 110vh;
     width: 100%;
+    padding-top: 100px;
     background: #121a26;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.95) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.005) 0%, rgba(0, 0, 0, 0.95) 20%);
 
     &__header {
         margin: 100px 0 50px 0;
@@ -19,6 +22,9 @@
             margin-bottom: 0.2em;
         }
 
+        p{
+            font-size: $paragraph;
+        }
         a {
             color: $pink_2;
         }
