--- a/src/components/Layout/Projects/Project.module.scss
+++ b/src/components/Layout/Projects/Project.module.scss
@@ -47,5 +47,9 @@
                 color: $white;
             }
         }
+        &__techList{
+            display: flex;
+            flex-wrap: wrap;
+        }
     }
 }
