--- a/src/components/Layout/Projects/Tech.module.scss
+++ b/src/components/Layout/Projects/Tech.module.scss
@@ -1,19 +1,18 @@
 @import '/src/styles/variables.scss';
 
 .tech {
-    li {
-        color: $white;
-        background: linear-gradient(38deg, $pink, $pink_2);
-        border: none;
-        border-radius: 1em;
-        margin: 0.5em;
-        padding: 1.5em;
-        font-size: 1em;
-        letter-spacing: $letterSpacing;
-        transition: 0.2s;
+    color: $white;
+    background: linear-gradient(38deg, $pink, $pink_2);
+    border: none;
+    border-radius: 1em;
+    margin: 0.5em;
+    padding: 1.5em;
+    font-size: 1em;
+    letter-spacing: $letterSpacing;
+    transition: 0.2s;
+    cursor: default;
 
-        &:hover {
-            box-shadow: 0 0 30px $pink;
-        }
+    &:hover {
+        box-shadow: 0 0 30px $pink;
     }
 }
