--- a/src/components/Layout/Hero/Slider/Slider.module.scss
+++ b/src/components/Layout/Hero/Slider/Slider.module.scss
@@ -17,19 +17,31 @@
             border-radius: $borderRadius;
             mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.95) 100%);
             -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.95) 20%);
-
-            .frontImage{
-
-            }
         }
 
-        img:nth-child(2) {
+        img.frontImage {
+            transition: all 2s ease-in-out;
+            opacity: 1;
+        }
+
+        img.frontImage.active {
+            opacity: 0;
+        }
+
+        img.backImage {
             width: 400px;
             object-fit: cover;
             position: absolute;
             z-index: -1;
             left: 70px;
             top: 60px;
+            transition: all 2s ease-in-out;
+            opacity: 0;
         }
+
+        img.backImage.active {
+            opacity: 1;
+        }
+
     }
 }
