--- a/src/components/Layout/Projects/ProjectItem.module.scss
+++ b/src/components/Layout/Projects/ProjectItem.module.scss
@@ -7,7 +7,7 @@
     height: 500px;
     padding: 1em;
     text-align: center;
-    background: #1e2b3e;
+    background: rgb(23, 33, 48);
     border-radius: $borderRadius;
     color: $white;
 
