--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,7 +7,7 @@ sans-serif;
 $poppins: "Poppins",
 sans-serif;
 
-$primary: rgba(23, 25, 27, 255);
+$primary: rgb(11, 16, 24);
 $secondary: rgb(45, 48, 51);
 $purple: rgba(101, 14, 163, 0.719);
 $pink: #923680;
