--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -1,7 +1,34 @@
-@use '/src/styles/variables.scss';
+@import '/src/styles/variables.scss';
 
 .footer {
+    display: grid;
+    justify-items: center;
+    gap: 20px;
+    padding-top: 50px;
+    background: $primary;
+
+
     h2:hover {
         color: white;
+    }
+
+    div {
+        display: flex;
+        gap: 2em;
+
+        a {
+            border: 1px solid;
+            border-radius: 2em;
+            padding: 1em;
+            font-size: 16px;
+            color: $white;
+            letter-spacing: $letterSpacing;
+            transition: 0.2s;
+
+            &:hover {
+                background: #9e9e9e1e;
+            }
+
+        }
     }
 }
