--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -7,7 +7,7 @@
     height: 110vh;
     width: 100%;
     padding-top: 100px;
-    background: #121a26;
+    background: $primary;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.95) 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.005) 0%, rgba(0, 0, 0, 0.95) 20%);
 
