--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -5,8 +5,7 @@
     justify-items: center;
     gap: 20px;
     padding-top: 50px;
-    background: $primary;
-
+    background: none;
 
     h2:hover {
         color: white;
