--- a/src/components/Layout/Hero/HeroBackground.module.scss
+++ b/src/components/Layout/Hero/HeroBackground.module.scss
@@ -40,13 +40,16 @@
     }
     }
     .bg {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
+    width: 100%;
+    height: 110vh;
+    position: absolute;
     top: 0;
     left: 0;
     background: #000;
     z-index: -1000;
+    overflow: hidden;
+    
+    
     }
     .z__1,
     .z__2,
