--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -7,9 +7,7 @@
     height: 110vh;
     width: 100%;
     padding-top: 100px;
-    background: $primary;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.95) 100%);
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.005) 0%, rgba(0, 0, 0, 0.95) 20%);
+    background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
 
     &__header {
         margin: 100px 0 50px 0;
@@ -22,9 +20,10 @@
             margin-bottom: 0.2em;
         }
 
-        p{
+        p {
             font-size: $paragraph;
         }
+
         a {
             color: $pink_2;
         }
