--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -4,8 +4,8 @@
     display: grid;
     justify-items: center;
     gap: 20px;
-    padding-top: 50px;
-    background: none;
+    padding: 50px 0;
+    background: $primary;
 
     h2:hover {
         color: white;
