--- a/src/components/Layout/Hero/Slider/Slider.module.scss
+++ b/src/components/Layout/Hero/Slider/Slider.module.scss
@@ -7,6 +7,7 @@
         overflow: hidden;
         width: 100%;
         z-index: 1000;
+        
 
         img {
             width: 400px;
@@ -14,8 +15,13 @@
             object-fit: cover;
             z-index: -1;
             border-radius: $borderRadius;
-            mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.95) 100%);
-            -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.95) 20%);
+           opacity: 0.9;
+            transition-property: transform;
+            transition-duration: 0.5s;
+            
+            &:hover{
+                transform: scale(1.02);
+            }
         }
 
         img.backImage {
