--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $pink_2: #af7099;
 $white: #fff;
 
 $pink_background: url("../assets/bckr.webp");
+$prof: url("../assets/prof.webp");
 
 // border-radius
 $borderRadius: 12px;
