--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -7,7 +7,7 @@
     height: 110vh;
     width: 100%;
     padding-top: 100px;
-    background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
+    background: $primary;
 
    
 
