--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,9 +13,11 @@ $purple: rgba(101, 14, 163, 0.719);
 $pink: #923680;
 $pink_2: #af7099;
 $white: #fff;
+$grey: #cecece;
 
 $pink_background: url("../assets/bckr.webp");
 $prof: url("../assets/prof.webp");
+$seoIcon: url("../assets/icons/seoIcon.png");
 
 // border-radius
 $borderRadius: 12px;
