--- a/src/components/Layout/Introduce/Introduce.module.scss
+++ b/src/components/Layout/Introduce/Introduce.module.scss
@@ -8,27 +8,35 @@
     background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
 
     div {
-        background: rgb(23, 33, 48);
-        border-radius: $borderRadius;
         width: auto;
         margin: 0 10px;
         padding: 30px;
     }
 
     &__aboutMe {
+        background: rgb(23, 33, 48);
+        border-radius: $borderRadius;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         gap: 20px;
         color: $white;
 
+
         h3 {
             font-size: $headingH3;
             letter-spacing: $letterSpacing;
+            margin-bottom: 20px;
         }
 
         p {
-            color: $white;
+            font-size: 1.2em;
+            text-align: left;
+            color: $grey;
+
+            span {
+                color: $pink_2
+            }
         }
 
         .prof {
@@ -37,8 +45,6 @@
             border-radius: 50%;
             background-image: $prof;
             background-size: cover;
-            //  no-repeat left center / cover;
-
         }
     }
 
@@ -50,15 +56,48 @@
         gap: 20px;
         color: $white;
 
+        span {
+            height: 100%;
+            width: 100%;
+            padding: 10px;
+            background: rgba(101, 14, 163, 0.57);
+            border-radius: $borderRadius;
+        }
+
+        span:nth-child(2) {
+            background: rgba(146, 54, 128, 0.57);
+        }
+
+        span:nth-child(3) {
+            background: rgba(204, 13, 102, 0.57);
+        }
+
         h3 {
             font-size: $headingH3;
             margin-bottom: 20px;
             letter-spacing: $letterSpacing;
-
         }
 
         li {
-            padding: 5px;
+            font-size: $paragraph;
+            color: $grey;
+            letter-spacing: $letterSpacing;
+            margin: 10px;
+            cursor: default;
+
+            &::before {
+                content: ">";
+                color: $pink;
+                font-size: 20px;
+                margin-right: 10px;
+            }
+
+            &:hover {
+                transform: scale(1.01);
+            }
+
         }
+
+
     }
 }
