--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -6,8 +6,8 @@
     justify-items: center;
     height: 110vh;
     width: 100%;
-    padding-top: 100px;
-    background: $primary;
+    padding: 150px 0;
+    background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
 
    
 
@@ -17,7 +17,7 @@
         text-align: center;
 
         h2 {
-            font-size: $headingH1;
+            font-size: $headingH2;
             letter-spacing: $letterSpacing;
             margin-bottom: 0.2em;
         }
