--- a/src/components/Layout/Hero/Hero.module.scss
+++ b/src/components/Layout/Hero/Hero.module.scss
@@ -1,25 +1,23 @@
 @import '/src/styles/variables.scss';
 
 .hero {
-    @include breakpoint(md) {
-
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-items: center;
-        align-items: center;
-        align-content: center;
-
-    }
 
     position: relative;
-    padding: 0 100px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
     align-items: flex-end;
+    padding: 0 100px;
     min-height: 90vh;
     // background-color: $primary;
+
+    @include breakpoint(md) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
 
     div {
         margin: 50px 20px;
@@ -38,7 +36,7 @@
 
         h1 {
             text-align: center;
-            font-size: $headingH1;
+            font-size: $headingH2;
             letter-spacing: $letterSpacing;
             color: $white;
 
@@ -51,6 +49,12 @@
                 -moz-text-fill-color: transparent;
                 font-weight: bold;
             }
+
+            @include breakpoint(lg) {
+            font-size: $headingH1;
+
+            }
+
         }
 
         h2 {
