--- a/src/components/Layout/Introduce/Introduce.module.scss
+++ b/src/components/Layout/Introduce/Introduce.module.scss
@@ -4,11 +4,11 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     width: 100%;
-    padding-top: 100px;
-    background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
+    padding: 150px 0;
+    background: $primary;
+    // background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
 
     div {
-        width: auto;
         margin: 0 10px;
         padding: 30px;
     }
@@ -24,13 +24,13 @@
 
 
         h3 {
-            font-size: $headingH3;
+            font-size: $headingH4;
             letter-spacing: $letterSpacing;
             margin-bottom: 20px;
         }
 
         p {
-            font-size: 1.2em;
+            font-size: 1.1em;
             text-align: left;
             color: $grey;
 
@@ -40,8 +40,8 @@
         }
 
         .prof {
-            width: 15em;
-            height: 15em;
+            width: 10em;
+            height: 10em;
             border-radius: 50%;
             background-image: $prof;
             background-size: cover;
@@ -50,26 +50,41 @@
 
     &__skills {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
         align-items: start;
         justify-items: center;
         gap: 20px;
         color: $white;
+        grid-template-areas:
+            "coding seo"
+            "cms cms ";
 
         span {
             height: 100%;
             width: 100%;
             padding: 10px;
-            background: rgba(101, 14, 163, 0.57);
             border-radius: $borderRadius;
+        }
+
+        span:first-child {
+            background: rgba(101, 14, 163, 0.57);
+            grid-area: coding;
         }
 
         span:nth-child(2) {
             background: rgba(146, 54, 128, 0.57);
+            grid-area: seo;
+
         }
 
         span:nth-child(3) {
             background: rgba(204, 13, 102, 0.57);
+            grid-area: cms;
+            ul{
+                display: flex;
+                justify-content: center;
+            }
         }
 
         h3 {
