--- a/src/components/Layout/Nav/Nav.module.scss
+++ b/src/components/Layout/Nav/Nav.module.scss
@@ -1,12 +1,12 @@
 @import '/src/styles/variables.scss';
 
 .nav {
+    display: flex;
     height: 100%;
-    display: none;
     align-items: center;
 
-    @include breakpoint(md) {
-        display: flex;
+    @include breakpoint(sm) {
+        display: none;
     }
 
     ul {
@@ -28,7 +28,7 @@
                 font-size: $headingH4;
                 position: relative;
 
-              
+
             }
         }
     }
