--- a/src/components/Layout/Hero/Slider/Slider.module.scss
+++ b/src/components/Layout/Hero/Slider/Slider.module.scss
@@ -21,10 +21,21 @@
             &:hover {
                 transform: scale(1.02);
             }
-        @include breakpoint(sm) {
-            width: 250px;
-            height: 250px;
-        }
+
+            @include breakpoint(lg) {
+                width: 350px;
+                height: 350px;
+            }
+
+            @include breakpoint(md) {
+                width: 350px;
+                height: 350px;
+            }
+
+            @include breakpoint(sm) {
+                width: 250px;
+                height: 250px;
+            }
         }
 
         img.backImage {
