--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -53,42 +53,31 @@ a:hover {
 
 // breakpoints
 
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
-
-// Small tablets (portrait view)
-$screen-md-min: 768px;
-
-// Tablets and small desktops
-$screen-lg-min: 992px;
-
-// Large tablets and desktops
-$screen-xl-min: 1200px;
 
 @mixin breakpoint($point) {
     @if $point==xl {
 
-        @media (min-width: $screen-xl-min) {
+        @media (min-width: 1200px) {
             @content;
         }
     }
 
     @else if $point==lg {
 
-        @media (min-width: $screen-lg-min) {
+        @media ((min-width: 992px) and (max-width: 1199px)) {
             @content;
         }
     }
 
     @else if $point==md {
 
-        @media (min-width: $screen-md-min) {
+        @media ((min-width: 768px) and (max-width: 991px)) {
             @content;
         }
     }
 
     @else if $point==sm {
-        @media (max-width: $screen-sm-min) {
+        @media (max-width: 767px) {
             @content;
         }
     }
