--- a/src/components/Layout/Hero/Slider/Slider.module.scss
+++ b/src/components/Layout/Hero/Slider/Slider.module.scss
@@ -33,8 +33,8 @@
             }
 
             @include breakpoint(sm) {
-                width: 330px;
-                height: 330px;
+                width: 300px;
+                height: 300px;
             }
         }
 
@@ -44,6 +44,12 @@
             z-index: -1;
             left: 70px;
             top: 60px;
+
+            @include breakpoint(sm) {
+                left: 15px;
+                top: 15px;
+
+            }
         }
     }
 }
