--- a/src/components/Layout/Hero/HeroBackground.module.scss
+++ b/src/components/Layout/Hero/HeroBackground.module.scss
@@ -50,9 +50,17 @@
     z-index: -1000;
     overflow: hidden;
 
+    @include breakpoint(lg) {
+           
+    }
+
+    @include breakpoint(md) {
+      height: 180vh;
+    
+    }
+
     @include breakpoint(sm) {
       height: 180vh;
-
     }
     
     
