--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -4,14 +4,30 @@
     display: grid;
     justify-items: center;
     gap: 20px;
-    padding: 50px 0;
+    padding: 80px 0;
     background: $primary;
+    // background-image: linear-gradient(to bottom, #8d08013d 0%, $primary 100%);
+
 
     h2:hover {
         color: white;
     }
 
-    div {
+    .contact{
+        display: flex;
+        gap: 10px;
+        p{
+            color: $white;
+        }
+        a{
+            color: $pink_2;
+        }
+        a:hover{
+            color: $pink;
+        }
+    }
+
+    .social {
         display: flex;
         gap: 2em;
 
