--- a/src/components/Layout/Hero/Hero.module.scss
+++ b/src/components/Layout/Hero/Hero.module.scss
@@ -14,10 +14,11 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+
     @include breakpoint(sm) {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center
+        justify-content: space-around;
     }
 
 
@@ -25,9 +26,9 @@
         margin: 50px 20px;
         height: 100%;
         z-index: 2;
+
         @include breakpoint(sm) {
-        margin: 50px 0;
-            
+            margin: 50px 0;
         }
     }
 
@@ -110,9 +111,9 @@
 
         @include breakpoint(sm) {
             width: 150px;
-            left: auto;
+            left: 200px;
             top: 100px;
-            opacity: 0.9;
+            opacity: 0.8;
         }
 
 
