--- a/src/components/Layout/Introduce/Introduce.module.scss
+++ b/src/components/Layout/Introduce/Introduce.module.scss
@@ -14,6 +14,7 @@
         margin: 100px 0 50px 0;
         color: $white;
         text-align: center;
+        justify-content: center;
 
         h2 {
             font-size: $headingH2;
