--- a/src/components/Layout/Hero/Hero.module.scss
+++ b/src/components/Layout/Hero/Hero.module.scss
@@ -37,6 +37,13 @@
         align-content: center;
         justify-items: start;
 
+        @include breakpoint(sm) {
+            justify-items: center;
+            justify-content: center;
+        }
+
+       
+
         &>* {
             margin: 15px;
         }
@@ -112,6 +119,13 @@
         @include breakpoint(sm) {
             width: 150px;
             left: 200px;
+            top: 100px;
+            opacity: 0.8;
+        }
+
+        @include breakpoint(vsm) {
+            width: 130px;
+            left: 160px;
             top: 100px;
             opacity: 0.8;
         }
