--- a/src/components/Layout/Hero/Slider/Slider.module.scss
+++ b/src/components/Layout/Hero/Slider/Slider.module.scss
@@ -36,6 +36,11 @@
                 width: 300px;
                 height: 300px;
             }
+
+            @include breakpoint(vsm) {
+                width: 260px;
+                height: 260px;
+            }
         }
 
         img.backImage {
